# GigaCell

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
config/: config.ini
gigacell/: CMakeLists.txt
gigacell/constraints/: CMakeLists.txt  area.cc  area.h  netlength.cc  netlength.h  notch.cc  notch.h  pindensity.cc  pindensity.h  refwidth.cc  refwidth.h
gigacell/database/: CMakeLists.txt  database.cc  database.h  mos.cc  mos.h  net.cc  net.h
gigacell/main/: CMakeLists.txt  gigaplace.cc  gigaplace.h  main.cc  main.h
gigacell/ops/: CMakeLists.txt  cluster.cc  cluster.h  operator.cc  operator.h
gigacell/parser/: CMakeLists.txt  parser.cc  parser.h
gigacell/partition/: CMakeLists.txt  kahypar.cc  kahypar.h
gigacell/placement/: CMakeLists.txt  place_db.cc  place_db.h  place_obj.cc  place_obj.h
gigacell/placement/ops/: mos_diffusion_sharing.cc  mos_diffusion_sharing.h  mos_flip.cc  mos_flip.h  mos_swap.cc  mos_swap.h
gigacell/utils/: CMakeLists.txt  dummy.cc
gigacell/writer/: CMakeLists.txt  writer.cc  writer.h
script/: assess.py  display_layout.py  layout_plot.py  regression.py
testing script/: test.py
